--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://abiddasurkar.github.io/ecommerce-portfolio",
+  "homepage": "https://abiddasurkar.github.io/ecommerce-platform",
   "dependencies": {
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
