--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ecommerce-portfolio",
+  "name": "ecommerce-platform",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://abiddasurkar.github.io/ecommerce-platform",
   "dependencies": {
+    "axios": "^1.6.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-icons": "^4.12.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
